# project

./: CMakeLists.txt  README.md
src/: constants.h  main.c  phase1.c  phase2.c
src/modules/: Analyzer.c  Analyzer.h  CodeSegement.c  CommandBuilder.c  DataSegment.c  Opearnds.c  SymbolsTable.c  SymbolsTable.h
src/utils/: Binary.c  Binary.h  FileReader.c  FileReader.h  List.c  List.h  TextUtils.c  TextUtils.h
